@@ -1,0 +1,2 @@
+# You can populate this file for randomly-chosen /KILL reasons.
+# $0 is replaced by the target nick and $1 by your nick.
