@@ -1002,6 +1002,7 @@ if test -n "$CYGWIN" -o -n "$EMXOS2" -o -n "$MINGWIN32"; then
   DEFAULT_BITCHX_HELP_FILE="BitchX.hlp"
   DEFAULT_SCRIPT_HELP_FILE="BitchX.hlp"
   DEFAULT_BITCHX_KICK_FILE="BitchX.kck"
+  DEFAULT_BITCHX_KILL_FILE="BitchX.kil"
   DEFAULT_BITCHX_QUIT_FILE="BitchX.qt"
   DEFAULT_BITCHX_IRCNAME_FILE="BitchX.nam"
   WINNT_INSTALL="\$(INSTALL_DATA) \$(top_srcdir)/doc/BitchX.ico \$(DESTDIR)\$(IRCLIB); \$(INSTALL_DATA) \$(top_srcdir)/doc/BitchX.bat \$(DESTDIR)\$(IRCLIB); \$(INSTALL_DATA) \$(top_srcdir)/doc/bx-rc \$(DESTDIR)\$(IRCLIB); \$(MV) \$(DESTDIR)\$(IRCLIB)/\$(VERSION)\$(EXEEXT) \$(DESTDIR)\$(IRCLIB)/\$(_VERSION_)\$(EXEEXT); \$(RM) \$(DESTDIR)\$(IRCLIB)/\$(_VERSION_).old"
@@ -1022,6 +1023,7 @@ else
   DEFAULT_BITCHX_HELP_FILE="BitchX.help"
   DEFAULT_SCRIPT_HELP_FILE="BitchX.help"
   DEFAULT_BITCHX_KICK_FILE="BitchX.kick"
+  DEFAULT_BITCHX_KILL_FILE="BitchX.kill"
   DEFAULT_BITCHX_QUIT_FILE="BitchX.quit"
   DEFAULT_BITCHX_IRCNAME_FILE="BitchX.ircnames"
   HINT_FILE="BitchX.hints"
@@ -1066,9 +1068,11 @@ AC_DEFINE_UNQUOTED(DEFAULT_BITCHX_HELP_FILE, "$DEFAULT_BITCHX_HELP_FILE", Defaul
 AC_SUBST(DEFAULT_BITCHX_HELP_FILE)
 AC_DEFINE_UNQUOTED(DEFAULT_SCRIPT_HELP_FILE, "$DEFAULT_SCRIPT_HELP_FILE", Default BitchX script file.)
 AC_SUBST(DEFAULT_SCRIPT_HELP_FILE)
-AC_DEFINE_UNQUOTED(DEFAULT_BITCHX_KICK_FILE, "$DEFAULT_BITCHX_KICK_FILE", Default BitchX kick file.)
+AC_DEFINE_UNQUOTED(DEFAULT_BITCHX_KICK_FILE, "$DEFAULT_BITCHX_KICK_FILE", Default BitchX kick reasons file.)
 AC_SUBST(DEFAULT_BITCHX_KICK_FILE)
-AC_DEFINE_UNQUOTED(DEFAULT_BITCHX_QUIT_FILE, "$DEFAULT_BITCHX_QUIT_FILE", Default BitchX quit file.)
+AC_DEFINE_UNQUOTED(DEFAULT_BITCHX_KILL_FILE, "$DEFAULT_BITCHX_KILL_FILE", Default BitchX kill reasons file.)
+AC_SUBST(DEFAULT_BITCHX_KILL_FILE)
+AC_DEFINE_UNQUOTED(DEFAULT_BITCHX_QUIT_FILE, "$DEFAULT_BITCHX_QUIT_FILE", Default BitchX quit reasons file.)
 AC_SUBST(DEFAULT_BITCHX_QUIT_FILE)
 AC_DEFINE_UNQUOTED(DEFAULT_BITCHX_IRCNAME_FILE, "$DEFAULT_BITCHX_IRCNAME_FILE", Default BitchX ircname file.)
 AC_SUBST(DEFAULT_BITCHX_IRCNAME_FILE)
